[metadata]
license_file = LICENSE-LGPL-3.0-only.txt


[bdist_wheel]
universal = 1


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0


[nosetests]
verbosity=1
with-coverage=1
cover-package=isbntools
cover-branches=1
cover-min-percentage=99


[pep257]
ignore=D203


[flake8]
ignore=N806,I100,I101,I201,N802,C901,E722
exclude=*/test/*,*/data/*,*/bin/*,*app.py*,*__init__.py*,*_initapp.py*,*_console.py
max-complexity=10


[doc8]
max-line-length=120
verbose=1

