[metadata]
license_file = LICENSE-LGPL-3.0.txt


[bdist_wheel]
universal = 1


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0


[pep257]
ignore=D203


[flake8]
max-line-length=88
ignore=N806,I100,I101,I201,N802,C901,E722
exclude=*/test/*,*/data/*,*/bin/*,*app.py*,*__init__.py*,*_initapp.py*,*_console.py
max-complexity=10


[doc8]
max-line-length=88
verbose=1


[coverage:run]
branch = True
omit = */.virtualenvs/dev3/*,isbntools/test/*


[coverage:report]
fail_under = 90
show_missing = True
skip_covered = True

